# classical_cipher_cryptanalysis_backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b02d2e194236_initial_schema_with_complete_analysis_.py
app/: dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: analyze.py  decrypt.py  encrypt.py  history.py
app/core/: config.py  exceptions.py
app/db/: session.py
app/models/: database.py  schemas.py
app/services/ai/: __init__.py  gemini_client.py
app/services/analysis/: statistics.py
app/services/detection/: cipher_detector.py
app/services/engines/: base.py  registry.py
app/services/engines/monoalphabetic/: __init__.py  affine.py  atbash.py  caesar.py  rot13.py  simple_substitution.py
app/services/engines/polyalphabetic/: __init__.py  autokey.py  beaufort.py  vigenere.py
app/services/engines/polygraphic/: __init__.py  four_square.py  hill.py  playfair.py
app/services/engines/transposition/: __init__.py  columnar.py  rail_fence.py
app/services/explanation/: generator.py
app/services/optimization/: hill_climbing.py  scoring.py
app/services/pipeline/: __init__.py  classifier.py  filter.py  orchestrator.py  scorer.py
app/services/preprocessing/: language_detector.py  normalizer.py
docs/: api-reference.md
tests/: test_all_ciphers.py  test_caesar.py
